--- a/packs/hpe-icsp/actions/icsp_server_attributes_get.yaml
+++ b/packs/hpe-icsp/actions/icsp_server_attributes_get.yaml
@@ -7,7 +7,7 @@
   parameters:
     mids:
       type: "array"
-      description: "Server MID list, Comma seperated."
+      description: "Server MID list."
       required: true
       position: 0
     attribute_key:
