--- a/packs/hpe-icsp/actions/icsp_mid_get.yaml
+++ b/packs/hpe-icsp/actions/icsp_mid_get.yaml
@@ -1,7 +1,7 @@
 ---
   name: "icsp_mid_get"
   runner_type: "run-python"
-  description: "Retreive MID for a given server"
+  description: "Retreive MIDs for specified servers."
   enabled: true
   entry_point: "icsp_mid_get.py"
   parameters:
