--- a/packs/hpe-icsp/actions/icsp_multi_server_attribute_add.yaml
+++ b/packs/hpe-icsp/actions/icsp_multi_server_attribute_add.yaml
@@ -1,10 +1,10 @@
 ---
-name: "icsp_ids_to_os"
+name: "icsp_multi_server_attribute_add"
 runner_type: "mistral-v2"
 pack: "hpe-icsp"
 enabled: true
-entry_point: "workflows/icsp_ids_to_os.yaml"
-description: "Apply OS Build plans to a series of Machine Serial Number/UUIDs."
+entry_point: "workflows/icsp_multi_server_attribute_add.yaml"
+description: "Apply Attribute with server unique values across multiple servers."
 
 parameters:
   identifiers:
@@ -20,23 +20,22 @@ parameters:
       - serialnumber
       - UUID
     default: serialnumber
-  hostnames:
+  attribute_key:
     required: true
     position: 2
-    type: array
-    description: "Hostname to be applied to this server, Must match order of identifiers."
-  buildplan_ids:
+    type: string
+    description: "Attribute Key to be added."
+  attribute_values:
     required: true
     position: 3
     type: array
-    description: "Comma seperated list of Builplan URI ids"
+    description: "List of Values to be set against servers. Must match order of identifier."
   connection_details:
     required: false
     position: 4
     type: object
     description: "Overriding connection details for ICSP server"
   workflow:
-    default: hpe-icsp.icsp_ids_to_os.entry
+    default: hpe-icsp.icsp_multi_server_attribute_add.entry
     immutable: true
     type: string
-
