Rename pack from networking-utils to networking_utils.
Review comment from @kami.

--- a/packs/networking_utils/pack.yaml
+++ b/packs/networking_utils/pack.yaml
@@ -1,5 +1,5 @@
 ---
-name: networking-utils
+name: networking_utils
 description: A pack containing useful networking utils for use in workflows.
 keywords:
     - networking
