--- a/packs/nagios/etc/config.yaml
+++ b/packs/nagios/etc/config.yaml
@@ -1,5 +1,5 @@
 ---
-  st2_username: "testu"
-  st2_password: ""
-  st2_api_base_url: "http://localhost:9101/v1"
-  st2_auth_base_url: "http://localhost:9100"
+  st2_username: "st2admin"
+  st2_password: "pass"
+  st2_api_base_url: "https://localhost/api/v1/"
+  st2_auth_base_url: "https://localhost/auth/v1/"
