Make URL a module level constant and reduce number of HTTP GET requests by increasing number of items per page.

--- a/packs/packagecloud/actions/list_packages.yaml
+++ b/packs/packagecloud/actions/list_packages.yaml
@@ -26,7 +26,6 @@ parameters:
         type: string
         description: Token to access the packagecloud API
         default: "{{system.pkg_cloud_token}}"
-    url:
-        type: string
-        immutable: true
-        default: "https://{{api_token}}:@packagecloud.io/api/v1/repos/{{repo}}/packages.json"
+    per_page:
+        type: number
+        default: 200
