--- a/packs/twitter/config.yaml
+++ b/packs/twitter/config.yaml
@@ -6,6 +6,7 @@ access_token:
 access_token_secret:
 
 query:
-  - "StackStorm OR @Stack_Storm"
+  - "StackStorm"
+  - "@Stack_Storm"
 count: 30
 language: en
