--- a/packs/vdx/actions/interface_admin_state.yaml
+++ b/packs/vdx/actions/interface_admin_state.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Set interface administrative state.
 enabled: true
 entry_point: interface_admin_state.py
 name: interface_admin_state
