--- a/packs/vdx/actions/interface_port_channel_minimum_links.yaml
+++ b/packs/vdx/actions/interface_port_channel_minimum_links.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Set minimum number of links in a port channel.
 enabled: true
 entry_point: interface_port_channel_minimum_links.py
 name: interface_port_channel_minimum_links
