--- a/packs/vdx/actions/interface_private_vlan_mode.yaml
+++ b/packs/vdx/actions/interface_private_vlan_mode.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Set PVLAN mode (promiscuous, host, trunk).
 enabled: true
 entry_point: interface_private_vlan_mode.py
 name: interface_private_vlan_mode
