--- a/packs/vdx/actions/interface_switchport_pvlan_mapping.yaml
+++ b/packs/vdx/actions/interface_switchport_pvlan_mapping.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Switchport private VLAN mapping.
 enabled: true
 entry_point: interface_switchport_pvlan_mapping.py
 name: interface_switchport_pvlan_mapping
