--- a/packs/vdx/actions/interface_vrrp_priority.yaml
+++ b/packs/vdx/actions/interface_vrrp_priority.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Set VRRP priority.
 enabled: true
 entry_point: interface_vrrp_priority.py
 name: interface_vrrp_priority
