--- a/packs/vdx/actions/bgp_get_bgp_neighbors.yaml
+++ b/packs/vdx/actions/bgp_get_bgp_neighbors.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Get BGP neighbors configured on a device.
 enabled: true
 entry_point: bgp_get_bgp_neighbors.py
 name: bgp_get_bgp_neighbors
