--- a/packs/vdx/actions/bgp_graceful_restart.yaml
+++ b/packs/vdx/actions/bgp_graceful_restart.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Set BGP next hop recursion property.
 enabled: true
 entry_point: bgp_graceful_restart.py
 name: bgp_graceful_restart
