--- a/packs/vdx/actions/bgp_multihop.yaml
+++ b/packs/vdx/actions/bgp_multihop.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Set BGP multihop property for a neighbor.
 enabled: true
 entry_point: bgp_multihop.py
 name: bgp_multihop
