--- a/packs/vdx/actions/bgp_redistribute.yaml
+++ b/packs/vdx/actions/bgp_redistribute.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Set BGP redistribute properties.
 enabled: true
 entry_point: bgp_redistribute.py
 name: bgp_redistribute
