--- a/packs/vdx/actions/interface_description.yaml
+++ b/packs/vdx/actions/interface_description.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Set interface description.
 enabled: true
 entry_point: interface_description.py
 name: interface_description
