--- a/packs/vdx/actions/interface_fabric_trunk.yaml
+++ b/packs/vdx/actions/interface_fabric_trunk.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Set fabric trunk state.
 enabled: true
 entry_point: interface_fabric_trunk.py
 name: interface_fabric_trunk
