--- a/packs/vdx/actions/interface_lacp_timeout.yaml
+++ b/packs/vdx/actions/interface_lacp_timeout.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Set lacp timeout.
 enabled: true
 entry_point: interface_lacp_timeout.py
 name: interface_lacp_timeout
