--- a/packs/vdx/actions/interface_private_vlan_type.yaml
+++ b/packs/vdx/actions/interface_private_vlan_type.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Set the PVLAN type (primary, isolated, community).
 enabled: true
 entry_point: interface_private_vlan_type.py
 name: interface_private_vlan_type
