--- a/packs/vdx/actions/interface_switchport.yaml
+++ b/packs/vdx/actions/interface_switchport.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Set interface switchport status.
 enabled: true
 entry_point: interface_switchport.py
 name: interface_switchport
