--- a/packs/vdx/actions/interface_transport_service.yaml
+++ b/packs/vdx/actions/interface_transport_service.yaml
@@ -1,4 +1,4 @@
-description: ''
+description: Configure VLAN Transport Service.
 enabled: true
 entry_point: interface_transport_service.py
 name: interface_transport_service
