--- a/packs/nagios/rules/nagios_service_chat.yaml
+++ b/packs/nagios/rules/nagios_service_chat.yaml
@@ -10,7 +10,7 @@ criteria:
     pattern: 2
     type: gt
 action:
-  ref: hubot.post_message
+  ref: chatops.post_message
   parameters:
     message: NAGIOS {{trigger.service}} ID:{{trigger.event_id}} STATE:{{trigger.state}}/{{trigger.state_type}}
       {{trigger.msg}}
