--- a/packs/nagios/rules/nagios_service_mail.yaml
+++ b/packs/nagios/rules/nagios_service_mail.yaml
@@ -2,13 +2,13 @@
 name: send_mail
 pack: nagios
 description: Send mail when nagios service state changes
-enabled: true
+enabled: false
 trigger:
   type: nagios.service_state_change
 criteria: {}
 action:
   ref: core.sendmail
   parameters:
-    to: 'patrick@stackstorm.com'
+    to: 'changeme@example.com'
     subject: 'ST2 Nagios Service Alert [{{trigger.state_type}}]: {{trigger.state}}'
     body: '{{trigger.service}} on {{trigger.host}} is {{trigger.state}} {{trigger.state_type}}.<br>Attempts: {{trigger.attempt}}.<br>MSG: {{trigger.msg}}'
