--- a/packs/zendesk/actions/close_ticket.yaml
+++ b/packs/zendesk/actions/close_ticket.yaml
@@ -7,5 +7,9 @@ entry_point: close_ticket.py
 parameters:
   ticket_id:
     type: integer
-    description: "Provide Zendesk ticket ID"
+    description: "ID of the ticket to change"
+    required: true
+  status:
+    type: string
+    description: "The status to change the ticket to"
     required: true
