--- a/packs/zendesk/aliases/create_ticket.yaml
+++ b/packs/zendesk/aliases/create_ticket.yaml
@@ -11,15 +11,18 @@ ack:
 result:
   extra:
     slack:
-      title: "{% if execution.result.result.error is not defined %}{{execution.parameters.subject}}{% else %}Error!{% endif %}"
-      text: "{{execution.parameters.description}}"
+      title: "{% if execution.result.result.error is not defined %}{{execution.result.result.subject}}{% else %}Error!{% endif %}"
       fallback: "New Zendesk Ticket"
       footer: "Zendesk"
       footer_icon: "https://zen-marketing-documentation.s3.amazonaws.com/docs/en/branding-logo-zendesk.png"
-      color: "{% if execution.result.result.error is not defined%}good{% else %}danger{% endif %}"
+      color: "{% if execution.result.result.error is not defined %}good{% else %}danger{% endif %}"
+      fields:
+        - title: "Zendesk Page"
+          value: "<{{execution.result.result.ticket_url}}|Ticket #{{execution.result.result.ticket_id}}>"
+          short: true
   format: |
     {% if execution.result.result.error is not defined %}
-    The ID for the newly created ticket is *{{execution.result.result.ticket_id}}*{~}{{execution.parameters.description}}
+    The ID for the newly created ticket is *{{execution.result.result.ticket_id}}*{~}{{execution.result.result.description}}
     {% else %}
     Error: {{execution.result.result.error}}{~}See {{execution.id}} for more details.
     {% endif %}
