--- a/packs/zendesk/aliases/update_ticket.yaml
+++ b/packs/zendesk/aliases/update_ticket.yaml
@@ -4,7 +4,7 @@ pack: "zendesk"
 description: "Update a Zendesk ticket"
 action_ref: "zendesk.update_ticket"
 formats:
-  - "zendesk update {{ticket_id}} {{comment_text}} {{public=false}}"
+  - "zendesk update {{ ticket_id }} {{ comment_text }} {{ public=false }}"
 ack:
   enabled: false
   append_url: false
@@ -18,11 +18,11 @@ result:
       color: "{% if execution.result.result.error is not defined%}good{% else %}danger{% endif %}"
       fields:
         - title: "Zendesk Page"
-          value: "<{{execution.result.result.ticket_url}}|Ticket #{{execution.result.result.ticket_id}}>"
+          value: "{% if execution.result.result.error is not defined%}<{{execution.result.result.ticket_url}}|Ticket #{{execution.result.result.ticket_id}}>{% else %}Not Available{% endif %}"
           short: true
   format: |
     {% if execution.result.result.error is not defined %}
     The following {% if execution.parameters.public %}public{% else %}private{% endif %} comment was added: ```{{execution.parameters.comment_text}}```
     {% else %}
-    Error: {{execution.result.result.error}}{~}See {{execution.id}} for more details.
+    Error: {{execution.result.result.error}}
     {% endif %}
