--- a/packs/vsphere/actions/vm_hw_nic_edit.yaml
+++ b/packs/vsphere/actions/vm_hw_nic_edit.yaml
@@ -27,6 +27,6 @@
       required: true
     network_name:
       type: "string"
-      description: "Network Adapater should be connected to"
+      description: "Network Adapater should be connected to. Distributed Port Groups take presidence over Standard Port Groups of the same name "
       required: true
 
